--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@
 __pycache__/
 .envrc
 
-# Holds basic variable values for the local system, shouldn't be shared.
-variables.txt
+# Holds the current machine config name, varies by install.
+machine_config.txt
