Try to stabilise laptop tray_output icons.

--- a/configs/i3/.config/i3/config
+++ b/configs/i3/.config/i3/config
@@ -136,13 +136,13 @@ bindsym $sup+i resize grow height 5px or 5ppt
 bindsym $sup+Shift+i resize shrink height 5px or 5ppt
 
 bar {
-    output primary
-    tray_output primary
+    output {{ PRIMARY_DISPLAY }}
+    tray_output {{ PRIMARY_DISPLAY }}
     position top
     font pango:Noto Sans Mono 11
     status_command i3blocks
 }
-{%- for display in STATUSBAR_DISPLAYS %}
+{%- for display in STATUSBAR_DISPLAYS|sort %}
 bar {
     output {{ display }}
     font pango:Noto Sans Mono 11
@@ -150,7 +150,7 @@ bar {
     status_command i3blocks
 }
 {%- endfor %}
-{%- for display in OTHER_DISPLAYS %}
+{%- for display in OTHER_DISPLAYS|sort %}
 bar {
     output {{ display }}
     position top
